<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currencyTypeTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/converter_item_background"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/currencyType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/current_type"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/bid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bid"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/currencyType"
                app:layout_constraintEnd_toStartOf="@id/ask"
                app:layout_constraintTop_toTopOf="@id/currencyType" />

            <TextView
                android:id="@+id/ask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/ask"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/bid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/currencyType" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currencyConverterRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@id/converterConstraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currencyTypeTitleLayout"
            tools:itemCount="5"
            tools:listitem="@layout/currency_converter_item" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/converterConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/converter_item_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currencyConverterRecyclerView">

            <EditText
                android:id="@+id/inputFields"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/currency_converter_fields_background"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_the_amount"
                android:text=""
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/amountFields"
                app:layout_constraintStart_toStartOf="@id/convertButton"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="Enter the amount" />

            <Spinner
                android:id="@+id/spinnerConvercies"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/currencies_background"
                android:contentDescription="@string/warning"
                android:entries="@array/currencies"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="@id/inputFields"
                app:layout_constraintEnd_toEndOf="@id/convertButton"
                app:layout_constraintStart_toEndOf="@id/inputFields"
                app:layout_constraintTop_toTopOf="@id/inputFields" />

            <EditText
                android:id="@+id/amountFields"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/currency_converter_fields_background"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/convertButton"
                app:layout_constraintTop_toBottomOf="@id/inputFields"
                android:autofillHints="Amount" />

            <TextView
                android:id="@+id/amountFieldsCurrency"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/currencies_background"
                android:gravity="center"
                android:text="@string/sar"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/amountFields"
                app:layout_constraintEnd_toEndOf="@id/convertButton"
                app:layout_constraintStart_toEndOf="@id/amountFields"
                app:layout_constraintTop_toTopOf="@id/amountFields" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/convertButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/currency_convert_button_background"
                android:enabled="false"
                android:text="@string/convert"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>