<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="100dp"
            android:background="@drawable/flat_line"
            app:layout_constraintEnd_toEndOf="@id/arrivalButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/departureButton"
            style="@style/SelectedButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/selected_button_background"
            android:text="@string/departure"
            android:textAllCaps="false"
            android:textColor="@color/color_background"
            app:layout_constraintEnd_toStartOf="@id/arrivalButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/flights_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/arrivalButton"
            style="@style/DefaultButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/default_button_background"
            android:text="@string/arrival"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/departureButton"
            app:layout_constraintTop_toTopOf="@id/departureButton"
            android:layout_marginStart="1dp" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/searchview_background"
            android:queryHint="@string/search"
            android:textCursorDrawable="@null"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="@id/arrivalButton"
            app:layout_constraintStart_toStartOf="@id/departureButton"
            app:layout_constraintTop_toBottomOf="@id/departureButton"
            app:queryBackground="@null" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flightsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>